Feature: Update div amb nom

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>PolElhombre</title>
 </head>
 <body>
+    <div><p>Examen M08</p></div>
+    <div><p>Pol Elhombre</p></div>
+  
     
 </body>
 </html>
